--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,13 @@
-
+# Edit .env with your API keys:
+# - GOOGLE_API_KEY for Gemini
+# - FASHN_API_KEY for virtual try-on
+# - INDITEX_API_KEY for product search
+# - PICTURE_BUCKET
+# - ACCESS_KEY_ID
+# - SECRET_ACCESS_KEY
+# - INDITEX_USER
+# - INDITEX_SECRET
+# - INDITEX_OAUTH_URL
+# - INDITEX_API_URL
+# - WHISPER_API_URL
+# - FASHNIA_API_URL
